--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,11 +16,12 @@ jobs:
         with:
           node-version: 20.15.1
 
-      - name: Cache node modules
+      - name: Cache dependencies.
         uses: actions/cache@v3
         with:
           path: ~/.cache/yarn
-          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          
         
           
       - name: Install dependencies.
